interstitial z-index fix

--- a/shared/js/cyph/components/account/account.component.scss
+++ b/shared/js/cyph/components/account/account.component.scss
@@ -167,7 +167,7 @@ cyph-account-menu.mobile {
 	height: 100%;
 	top: 0px;
 	left: 0px;
-	z-index: 2;
+	z-index: 5;
 
 	.loading {
 		position: absolute;
